runFormatTest(import.meta, ["typescript"]);
runFormatTest(import.meta, ["typescript"], { semi: false });
