// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`type-arguments.ts - {"semi":false} format 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
semi: false
                                                                                | printWidth
=====================================input======================================
// #6988

// functional component with ugly linebreak
export const MyLongNamedReactFunctionalComponent1: FunctionComponent<ALongNamedInterface1 & ALongNamedInterface2> = (props) => {}

// functional component with valid linebreak
export const MyLongNamedReactFunctionalComponent2: FunctionComponent<ALongNamedInterface1 | ALongNamedInterface2> = (props) => {}

// functional component with valid linebreak
export const MyLongNamedReactFunctionalComponent3: FunctionComponent<ALongNamedInterface1, ALongNamedInterface2> = (props) => {}

=====================================output=====================================
// #6988

// functional component with ugly linebreak
export const MyLongNamedReactFunctionalComponent1: FunctionComponent<
  ALongNamedInterface1 & ALongNamedInterface2
> = (props) => {}

// functional component with valid linebreak
export const MyLongNamedReactFunctionalComponent2: FunctionComponent<
  ALongNamedInterface1 | ALongNamedInterface2
> = (props) => {}

// functional component with valid linebreak
export const MyLongNamedReactFunctionalComponent3: FunctionComponent<
  ALongNamedInterface1,
  ALongNamedInterface2
> = (props) => {}

================================================================================
`;

exports[`type-arguments.ts format 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// #6988

// functional component with ugly linebreak
export const MyLongNamedReactFunctionalComponent1: FunctionComponent<ALongNamedInterface1 & ALongNamedInterface2> = (props) => {}

// functional component with valid linebreak
export const MyLongNamedReactFunctionalComponent2: FunctionComponent<ALongNamedInterface1 | ALongNamedInterface2> = (props) => {}

// functional component with valid linebreak
export const MyLongNamedReactFunctionalComponent3: FunctionComponent<ALongNamedInterface1, ALongNamedInterface2> = (props) => {}

=====================================output=====================================
// #6988

// functional component with ugly linebreak
export const MyLongNamedReactFunctionalComponent1: FunctionComponent<
  ALongNamedInterface1 & ALongNamedInterface2
> = (props) => {};

// functional component with valid linebreak
export const MyLongNamedReactFunctionalComponent2: FunctionComponent<
  ALongNamedInterface1 | ALongNamedInterface2
> = (props) => {};

// functional component with valid linebreak
export const MyLongNamedReactFunctionalComponent3: FunctionComponent<
  ALongNamedInterface1,
  ALongNamedInterface2
> = (props) => {};

================================================================================
`;
